tests/errors/from_json_wrong_type.dang
type Summary {
  children: [String!]!
}

let summary: Summary! = JSON.decode("\"oops\"")
